# perdidos

./: Makefile.am  configure.ac  skin.py
box/: box_formuler1.py  box_formuler3.py  box_formuler4.py  box_gb800seplus.py  box_gb800ue.py  box_gb800ueplus.py  box_gbquad.py  box_gbue4k.py  box_gbultrase.py  box_gbultraue.py  box_hd1500.py  box_hd51.py  box_sf228.py  box_sf4008.py  box_spark7162.py  box_spycat.py  box_su980.py  box_vuduo.py  box_vusolo.py  box_vusolose.py  box_vuultimo.py  box_vuultimo4k.py  box_vuuno.py  box_vuuno4k.py  box_vuzero.py
data/: menu.xml  skin_display_gbue4k.xml
data/fonts/: Makefile.am  ae_AlMateen.license
data/rc_models/: rc_models.cfg
data/skin_default/spinner/: Makefile.am
lib/box/: box_formuler4turbo.py  box_gb800se.py  box_gbquadplus.py  box_gbx1.py  box_vuduo2.py  box_vusolo2.py
lib/python/Components/: SystemInfo.py
lib/python/Components/Converter/: Makefile.am
lib/python/Components/Renderer/: Makefile.am
lib/python/Screens/: Makefile.am  MultibootGB.py
lib/python/Tools/: Directories.py  RedirectOutput.py
