#
# WARNING: If you modify the files installed here, change the version
# number of the enigma2-fonts package in enigma2.bb.
#
installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	andale.ttf \
	lcd.ttf \
	md_khmurabi_10.ttf \
	nmsbd.ttf \
	LiberationSans-Bold.ttf \
	LiberationSans-BoldItalic.ttf \
	LiberationSans-Italic.ttf \
	LiberationSans-Regular.ttf \
	tiny.ttf \
	DroidSans-Bold.ttf \
	cooper-black.ttf \
	ae_AlMateen.license \
	MyriadPro-Regular.otf \
	MyriadPro-Semibold.otf \
	MyriadPro-SemiboldIt.otf \
	Roboto-Regular.ttf
